31Mar00=======================================================================
1. fixed nnn-mmm in kill (erase/delete) msgs so that mmm is also deleted and
not just nnn -> mmm-1.
2. Added an autosplit to message importing so that messages are split
automagically into bits if the filename used in the import directory starts
with "split". This will add a [1/5] type string on the the end of the subject. 
3. dedupe more aggressively on the text of Spots so that only the 1st 28 chars
of text are considered (as opposed to the whole lot).
30Mar00=======================================================================
1. altered client.pl connect code so that it doesn't falsely recognise 
/spider/src/client as a 'client' instruction.
28Mar00=======================================================================
1. Added buffering to client 
2. Fixed LOGIN so that you can login with an arbitrary callsign
27Mar00=======================================================================
1. updated wpxloc.raw and rsgb.cty for 4W and TX0.
2. display 'start time' rather than 'last start time in' in who.
3. Allow local users to see their own sh/talk or sh/log stuff.
4. A more robust version of the C client.
5. Added a message exporting command 'export'.
6. allow swopping on all messages, including imported and manually sent ones
7. S A < B @ C $BID now works from the command line and thus bbses ought to
be able to send messages into the cluster. Bids are (currently) ignored.
26Mar00=======================================================================
1. first cut of C client
18Mar00=======================================================================
1. fixed convkeps.pl so that it accepts more formats for floating point.
08Mar00=======================================================================
1. tidied up Sun.pm and sh/sat
2. fixed sh/qra so that the correct lat/long is displayed if only one locator
is given.